2010-06-08  John Sullivan  <sullivan@apple.com>

        Rubber-stamped by Anders Carlsson.

        * mac/WebKit2.exp:
        Added _WKPageGetEstimatedProgress and _WKFrameGetPage

2010-06-08  Anders Carlsson  <andersca@apple.com>

        Reviewed by John Sullivan.

        Would like a way to query WKPageRef for the current progress value
        https://bugs.webkit.org/show_bug.cgi?id=40310
        <rdar://problem/8071299>

        Add WKPageGetEstimatedProgress. Remove the progress parameter from the didChangeProgress
        loader client callback function.

        * UIProcess/API/C/WKPage.cpp:
        (WKPageGetEstimatedProgress):
        * UIProcess/API/C/WKPage.h:
        * UIProcess/WebLoaderClient.cpp:
        (WebKit::WebLoaderClient::didChangeProgress):
        * UIProcess/WebLoaderClient.h:
        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::WebPageProxy):
        (WebKit::WebPageProxy::close):
        (WebKit::WebPageProxy::didStartProgress):
        (WebKit::WebPageProxy::didChangeProgress):
        (WebKit::WebPageProxy::didFinishProgress):
        (WebKit::WebPageProxy::processDidExit):
        * UIProcess/WebPageProxy.h:
        (WebKit::WebPageProxy::estimatedProgress):

2010-06-08  Anders Carlsson  <andersca@apple.com>

        Reviewed by John Sullivan.

        Would like a way to tell which WKPageRef a WKFrameRef is part of
        https://bugs.webkit.org/show_bug.cgi?id=40308
        <rdar://problem/8071251>

        Add and implement WKFrameGetPage.

        * UIProcess/API/C/WKFrame.cpp:
        (WKFrameGetPage):
        * UIProcess/API/C/WKFrame.h:
        * UIProcess/WebFrameProxy.h:
        (WebKit::WebFrameProxy::page):

2010-06-08  John Sullivan  <sullivan@apple.com>

        Rubber-stamped by Mark Rowe.

        * mac/WebKit2.exp:
        Added a few more symbols needed by Mac clients.

2010-06-08  MORITA Hajime  <morrita@google.com>

        Unreviewed. An attempt to fix test break.
